# rps

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.cache/fontconfig/: 0007a68067bac12973aa285ab0a1ec5c-le64.cache-9  00d5189c1d5ced4af9bb23cbaa9b1e94-le64.cache-9  05d4584c8502dc3ffd556d3f7801b9a7-le64.cache-9  0e135da317af6f176a4db80b1ef9e977-le64.cache-9  126fe7bfe1d7f9e2858389f98021b2c1-le64.cache-9  136de152a8e2f88e9119ac3dc105bebc-le64.cache-9  14aa54887253e0db8ea3e83f5f12d0e0-le64.cache-9  18d087f7705f7e0b7fd68284ace3075c-le64.cache-9  1bb192cf4a9a7beeafaf3a011e94039e-le64.cache-9  1c4449d05cff055b8e775f17928b9ab3-le64.cache-9  1d209d6530f6630f4e4027a324c7adcd-le64.cache-9  201a3d957fbc98ab52bc568ce56b67da-le64.cache-9  2303a06daa3b69895131e88fcbde2aaa-le64.cache-9  24e92028e9f52bc7f18660ba89d721df-le64.cache-9  2674e016e75f172fb324d35a12d5f730-le64.cache-9  280d07119adb9038ce9d7542429da8b6-le64.cache-9  290ec40ada3065b33a3250b168cf15bd-le64.cache-9  2bbe0c949bb38a60d7b233eb358f8199-le64.cache-9  2c234df7d77f13eaacaabf8816012c80-le64.cache-9  31008f63500895ced1cb80f8ea055d0a-le64.cache-9  3397c6c3297283482e655448c683b0e4-le64.cache-9  34f71d855a1f9c8cf5cbb876527bc4f8-le64.cache-9  37a15295202785abb33412031e0c39a2-le64.cache-9  3a859f6efad34265462450dedc85f2a1-le64.cache-9  3b4d449682034e2fa538090dfb4df618-le64.cache-9  3b8812cd16900a0b9226fda4c061b961-le64.cache-9  3c317ac78437cb557ff092b842414555-le64.cache-9  3eeb106c38626030e2b301e3d32389f3-le64.cache-9  4031a51526a061c004805d832141dddf-le64.cache-9  4363c0c0a30262be701515ccf19394f8-le64.cache-9  43cea6e59641b9810941ad423ed50453-le64.cache-9  49c532c6655322b1dc7822263f17e2af-le64.cache-9  4d2fc34be597727f23663cf34b8ff858-le64.cache-9  4d88af5ae6bde5b2a81873aa01dd01d8-le64.cache-9  4efef44f6e59ee0631766bfac15cbd20-le64.cache-9  50a5e1117c39bb5dc6d7ad3919ad3f17-le64.cache-9  (+85 more)
.cache/mpl/: fontlist-v390.json
docs/: formulas.md  terps_host.md
firmware_pico2/: CMakeLists.txt  README.md  config_default.json
firmware_pico2/include/: ads1220.h  config_default.h  edge_counter.h  eeprom_coeff.h  pps_cal.h  terps_config.h  uni_o.h  usb_cdc.h
firmware_pico2/src/: ads1220.cpp  config_default.cpp  edge_counter.cpp  eeprom_coeff.c  main.cpp  pps_cal.cpp  uni_o.cpp  usb_cdc.cpp
host_pi/: coeffs_example.json  config.json  main.py
samples/: sample_run.csv
tests/: test_coeff_provider.py  test_frames_binary.py  test_pipeline.py  test_poly_units.py  test_presets.py  test_runner_reconnect.py  test_terps.py
(+25 files in other folders)
